--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 * {
   outline: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 body {
   margin: 0;
+  padding: 20px 60px;
   font-family: "Open Sans Condensed", -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
