--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: blue;
+  /* background-color: blue; */
   margin: 0;
   font-family: "Open Sans Condensed", -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
